# QtProA

./: CMakeLists.txt  main.cpp  mainGUI.ui  ui_mainGUI.h
src/GUI/: CMakeLists.txt  app_init.cpp  app_init.h  c_main_window.cpp  c_main_window.h  icon_helper.cpp  icon_helper.h
